--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ pytest-cov = "^2.11.1"
 wemake-python-styleguide = "^0.15.2"
 
 [tool.poetry.scripts]
-hexlet-python-package = "hexlet_python_package.scripts.hexlet_python_package:main"
+hexlet-code = "hexlet_code.scripts.hexlet_code:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
