--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ pytest-cov = "^2.11.1"
 wemake-python-styleguide = "^0.15.2"
 
 [tool.poetry.scripts]
-hexlet-code = "hexlet_code.scripts.hexlet_code:main"
+gendiff = "gendiff.scripts.gendiff:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
