--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -1,35 +1,34 @@
 name: Python CI
 
 on:
-  - push
-  - pull_request
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # we want to test our package on several versions of Python
-        python-version: [3.8, 3.9, 3.10]
+        python-version: [3.8, 3.9]
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python-version}}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-        # make depends on poetry
       - name: Install dependencies
         run: |
           pip install poetry
           make install
-      - name: Run linter and pytest
-        run: |
-          make check
-      - name: Test & publish code coverage
+      - name: Run linter
+        run: make lint
+      - name: Run tests
+        run: make test
+      - name: Publish code coverage stat
         uses: paambaati/codeclimate-action@v2.7.4
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         with:
-          coverageCommand: make test-coverage
-          debug: true
-          
+          coverageCommand: make cc-coverage
