--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -21,6 +21,7 @@ jobs:
         # make depends on poetry
       - name: Install dependencies
         run: |
+          pip install poetry flake8 pytest
           pip install poetry
           make install
       - name: Run linter and pytest
