--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8"
+python = "^3.8"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.7"
