--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Set up python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.8
+          python-version: 3.8, 3.10
       - name: Install dependencies
         run: |
           pip install poetry flake8 pytest
