Add exceptions to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,8 @@ ignore =
 
 per-file-ignores =
   # it is possibble to have prints in scripts
-  gendiff/scripts/*.py: WPS421, WPS237, WPS336, WPS326, D103, WPS221, WPS305,
+  gendiff/scripts/*.py: WPS421
+  gendiff/*.py: WPS237, WPS336, WPS326, D103, WPS221, WPS305,
   N400, WPS318, WPS231, WPS210, WPS440, DAR201, WPS232, DAR101, E126, WPS226,
   C901, WPS441
 
