--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -55,16 +55,7 @@ jobs:
       - name: Test & publish code coverage
         uses: paambaati/codeclimate-action@v3.0.0
         env:
-      - name: Sending Reporter
-        env:
-          GITHUB_TOKEN: ${{ secrets.TEST_REPORTER_ID }}
-        run: |
-          ./cc-test-reporter after-build -r "$GITHUB_TOKEN"
-            
-
-#            CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
-#        with:
-#          coverageCommand: make test-coverage
-#          debug: true
-
-#          f929c578decf473055f8b0ba4ce62f2eb57ee58f9e423dd3198301dc6b0ad7b0
+          CC_TEST_REPORTER_ID: ${{secrets.f929c578decf473055f8b0ba4ce62f2eb57ee58f9e423dd3198301dc6b0ad7b0}}
+        with:
+          coverageCommand: make test-coverage
+          debug: true
