Add dist/ to ignorelist

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 *.egg-info
 __pycache__
 *.pyc
-*.tar.gz
+*.gz
+dist/
 .DS_Store
 .venv/
 .coverage
@@ -9,4 +10,3 @@ coverage.xml
 .pytest_cache/
 .vim
 .idea/
-.dist
