--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,8 @@ per-file-ignores =
   gendiff/scripts/*.py: WPS421
   gendiff/*.py: WPS237, WPS336, WPS326, D103, WPS221, WPS305,
   N400, WPS318, WPS231, WPS210, WPS440, DAR201, WPS232, DAR101, E126, WPS226,
-  C901, WPS441, WPS515, WPS300
+  C901, WPS441, WPS515, WPS300, WPS110, WPS111, WPS125, D401, WPS519, WPS204,
+  WPS516
 
 [tool:pytest]
 norecursedirs = __pycache__
