--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ autopep8 = "^1.5.7"
 pytest = "^6.2.3"
 pytest-cov = "^2.11.1"
 wemake-python-styleguide = "^0.15.2"
+PyYAML = "^6.0"
 
 [tool.poetry.scripts]
 gendiff = "gendiff.scripts.gendiff:main"
